# nx-parallel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Config.md  INSTALL.md  LICENSE.md  Makefile  README.md  RELEASE.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation_update.yml  feature_request.yml  other.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.yml
.github/workflows/: label-check.yaml  lint.yml  release.yml  test.yml
.history/: .gitignore_20240904133416  .gitignore_20240904154404  .gitignore_20240922013219  .gitignore_20240922013317  .gitignore_20240922013347  .gitignore_20240922013410
.history/_nx_parallel/: update_get_info_20240904153630.py
.history/nx_parallel/: interface_20240913115205.py  interface_20240913115335.py  interface_20240913115341.py  interface_20240913115412.py  interface_20240913120038.py  interface_20240913125605.py  interface_20240913125638.py  interface_20240913130321.py  interface_20240914131732.py  interface_20240914131813.py  interface_20240914131816.py  interface_20240914131825.py  interface_20240914132336.py  interface_20240914135019.py  interface_20240921194559.py  interface_20240921194615.py  interface_20240921194631.py  interface_20240921194914.py  interface_20240921195450.py
.history/nx_parallel/algorithms/shortest_paths/: unweighted_20240913122941.py  unweighted_20240913123451.py  unweighted_20240913125027.py
.history/nx_parallel/tests/: test_get_chunks_20240904012227.py  test_get_chunks_20240904015058.py
.history/nx_parallel/utils/: chunk_20240904013255.py  chunk_20240913125255.py  chunk_20240913125312.py  chunk_20240913125317.py  chunk_20240913125326.py  chunk_20240913125336.py  chunk_20240913125340.py  chunk_20240913125343.py  chunk_20240914131838.py  chunk_20240914131848.py  chunk_20240914132232.py  chunk_20240914132301.py  chunk_20240914132351.py  chunk_20240914134156.py  chunk_20240914140016.py  chunk_20240920144845.py  chunk_20240920144856.py  chunk_20240920145046.py  chunk_20240920145051.py  chunk_20240921194802.py  chunk_20240921194857.py  chunk_20240921195027.py  chunk_20240921195129.py  chunk_20240921202806.py  chunk_20240921202822.py  chunk_20240921203019.py  chunk_20240924124657.py  decorators_20240913125648.py  decorators_20240913125703.py  decorators_20240913125714.py  decorators_20240913125816.py  decorators_20240913125822.py  decorators_20240913125832.py  decorators_20240914131832.py  decorators_20240914132318.py  decorators_20240921194701.py  types_20240904013251.py  types_20240914134128.py  types_20240914134134.py
.history/nx_parallel/utils/tests/: test_chunk_20240914132412.py  test_chunk_20240921195011.py  test_chunk_20240921195148.py
_nx_parallel/: __init__.py  config.py  script.sh  update_get_info.py
benchmarks/: README.md  asv.conf.json
benchmarks/benchmarks/: bench_approximation.py  bench_assortativity.py  bench_bipartite.py  bench_centrality.py  bench_cluster.py  bench_components.py  bench_connectivity.py  bench_dag.py  bench_efficiency_measures.py  bench_harmonic_centrality.py  bench_isolate.py  bench_link_prediction.py  bench_node_chunks.py  bench_node_chunks_tournament.py  bench_shortest_paths.py  bench_tournament.py  bench_vitality.py  bench_voterank.py  common.py
benchmarks/benchmarks/node_chunk_or_not/: bench_node_chunks.py
benchmarks/html/: index.json  info.json  regressions.xml
benchmarks/html/graphs/summary/: bench_node_chunks.ChunkBenchmarks.time_all_pairs_bellman_ford_path_chunking.json  bench_node_chunks.ChunkBenchmarks.time_betweenness_centrality_chunking.json  bench_node_chunks.ChunkBenchmarks.time_local_efficiency_chunking.json  bench_node_chunks.ChunkBenchmarks.time_number_of_isolates_chunking.json  bench_node_chunks_tournament.TournamentChunkBenchmark.time_tournament_is_reachable_chunking.json
benchmarks/results/: benchmarks.json
benchmarks/results/nx-benchmarks/: ff6c23e8-virtualenv-py3.11-networkx3.2-nx-parallel.json  machine.json
nx_parallel/: __init__.py  centrality.py  external.py  graph.py  interface.py  misc.py  partition.py
nx_parallel/algorithms/: __init__.py  centrality.py  cluster.py  dag.py  distance_measures.py  efficiency_measures.py  isolate.py  link_prediction.py  mis.py  tournament.py  vitality.py
nx_parallel/algorithms/approximation/: connectivity.py
nx_parallel/algorithms/assortativity/: __init__.py  neighbor_degree.py
nx_parallel/algorithms/bipartite/: redundancy.py
nx_parallel/algorithms/centrality/: __init__.py  betweenness.py  closeness.py  degree.py  harmonic.py  reaching.py  voterank.py
nx_parallel/algorithms/centrality/tests/: __init__.py  test_betweenness.py  test_betweenness_centrality.py  test_closeness.py  test_closeness_centrality.py  test_degree_centrality.py  test_harmonic.py  test_harmonic_centrality.py  test_voterank_centrality.py
nx_parallel/algorithms/components/: __init__.py  attracting.py  connected.py  strongly_connected.py  weakly_connected.py
nx_parallel/algorithms/connectivity/: __init__.py  connectivity.py
nx_parallel/algorithms/shortest_paths/: __init__.py  dense.py  generic.py  unweighted.py  weighted.py
nx_parallel/algorithms/tests/: test_distance_measures.py  test_efficiency.py  test_isolate.py  test_mis.py  test_tournament.py  test_vitality.py
nx_parallel/algorithms/traversal/: __init__.py  breadth_first_search.py
nx_parallel/algorithms/utils/: chunk.py
nx_parallel/classes/: graph.py
nx_parallel/tests/: test_entry_points.py  test_get_chunks.py  test_mis.py  test_should_run.py
nx_parallel/utils/: __init__.py  backend.py  chunk.py  config.py  decorators.py  should_run_policies.py  types.py
nx_parallel/utils/tests/: test_chunk.py  test_should_run_policies.py
timing/: README.md  timing_all_functions  timing_all_functions.py  timing_comparison.md  timing_individual_function.py
timing/new_heatmaps/: timing_individual_function.py
timing/old_heatmaps/: timing_all_functions.py  timing_individual_function.py
