[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nx-parallel"
authors = [
    {name = "NetworkX Devs", email = "networkx-core@discuss.scientific-python.org"},
]
description = "An experimental parallel backend for NetworkX"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["networkx", "algorithms", "parallel"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "networkx",
    "joblib"
]
dynamic = ["version"]

[tool.hatch.version]
path = "nx_parallel/__init__.py"

[project.optional-dependencies]
developer = [
    'pre-commit',
]
test = [
    'pytest>=7.2',
    'numpy>=1.23',
    'scipy>=1.9,!=1.11.0,!=1.11.1',
]

[project.entry-points."networkx.backends"]
parallel = "nx_parallel.interface:Dispatcher"

[project.entry-points."networkx.backend_info"]
parallel = "_nx_parallel:get_info"

[tool.hatch.build.targets.wheel]
packages = ["_nx_parallel", "nx_parallel",]

[tool.ruff]
line-length = 88
target-version = 'py310'

[tool.ruff.lint]
per-file-ignores = { "__init__.py" = ['I', 'F403'] }
