[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61.2']

[project]
name = "nx-parallel"
description = "A parallel backend for NetworkX. It uses joblib to run NetworkX algorithms on multiple CPU cores."
readme = "README.md"
requires-python = ">=3.12"
dynamic = ['version']
keywords = ["networkx", "graphs", "algorithms", "parallel"]
license = {text = "BSD-3-Clause"}
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3 :: Only',
]

dependencies = [
    "networkx>=3.4.2",
    "joblib>=1.5.0"
]

[[project.authors]]
name = "NetworkX Devs"
email = "networkx-core@discuss.scientific-python.org"

[[project.maintainers]]
name = 'NetworkX Developers'
email = 'networkx-discuss@googlegroups.com'

[project.urls]
"Bug Tracker" = 'https://github.com/networkx/nx-parallel/issues'
"Source Code" = 'https://github.com/networkx/nx-parallel'

[project.entry-points."networkx.backends"]
parallel = "nx_parallel.interface:BackendInterface"

[project.entry-points."networkx.backend_info"]
parallel = "_nx_parallel:get_info"

[project.optional-dependencies]
developer = [
    'pre-commit',
    'ruff==0.14.0',
]
heatmap = [
    'matplotlib>=3.9',
    'seaborn>=0.13.2',
    'pandas>=2.2',
]
test = [
    'pytest>=7.2',
    'numpy>=2',
    'scipy>=1.12',
]

[tool.pytest.ini_options]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:the hashes produced',
]

[tool.setuptools]
zip-safe = false
include-package-data = false
packages = [
    'nx_parallel',
    '_nx_parallel',
    'nx_parallel.algorithms',
    'nx_parallel.algorithms.approximation',
    'nx_parallel.algorithms.assortativity',
    'nx_parallel.algorithms.bipartite',
    'nx_parallel.algorithms.centrality',
    'nx_parallel.algorithms.components',
    'nx_parallel.algorithms.connectivity',
    'nx_parallel.algorithms.shortest_paths',
    'nx_parallel.utils',
]

platforms = [
    'Linux',
    'Mac OSX',
    'Windows',
    'Unix',
]

[tool.setuptools.dynamic.version]
attr = 'nx_parallel.__version__'

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['I', 'F403', 'F401']

[tool.ruff.format]
docstring-code-format = true
